force-app/main/default/objects/R360_Classification__mdt/R360_Classification__mdt.object-meta.xml
<CustomObject><label>Resource 360 Classification</label><pluralLabel>Resource 360 Classifications</pluralLabel><visibility>Public</visibility></CustomObject>