force-app/main/default/objects/R360_Classification__mdt/fields/Billable__c.field-meta.xml
<CustomField><fullName>Billable__c</fullName><defaultValue>false</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Billable</label><type>Checkbox</type></CustomField>