force-app/main/default/objects/R360_Classification__mdt/fields/Classification_Value__c.field-meta.xml
<CustomField><fullName>Classification_Value__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Classification Value</label><length>80</length><type>Text</type></CustomField>