force-app/main/default/objects/R360_Classification__mdt/fields/Default_Review_Days__c.field-meta.xml
<CustomField><fullName>Default_Review_Days__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Default Review Days</label><precision>3</precision><scale>0</scale><type>Number</type></CustomField>