force-app/main/default/objects/R360_Classification__mdt/fields/Escalation_Policy__c.field-meta.xml
<CustomField><fullName>Escalation_Policy__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Escalation Policy</label><length>255</length><type>Text</type></CustomField>