force-app/main/default/objects/R360_Classification__mdt/fields/Requires_Control__c.field-meta.xml
<CustomField><fullName>Requires_Control__c</fullName><defaultValue>true</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Requires Owner and Review</label><type>Checkbox</type></CustomField>