force-app/main/default/objects/R360_Classification__mdt/fields/Requires_SOW__c.field-meta.xml
<CustomField><fullName>Requires_SOW__c</fullName><defaultValue>false</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Requires SOW</label><type>Checkbox</type></CustomField>